# classification-tree

./: .gitignore  CMakeLists.txt  README.md  license_header  run_tests.sh  test.sh
benchmark/: CMakeLists.txt  search.cpp
cases/: CMakeLists.txt
cases/trees/: CMakeLists.txt  README.md  trees_distribution.cpp  trees_occupancy.cpp  trees_profiling.cpp
cases/trees/data/: plot_exe_times.R
cases/trees/data/0/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
cases/trees/data/1_Cexp/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
cases/trees/data/1_Dminpl/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
cases/trees/data/2_Dminpl_Cexp/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
cases/trees/data/2_Dminpl_Cvar/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
cases/trees/data/3_Dminpl_Cexp_Cvar/: times_10.txt  times_100.txt  times_11.txt  times_12.txt  times_13.txt  times_14.txt  times_15.txt  times_16.txt  times_17.txt  times_18.txt  times_19.txt  times_20.txt  times_200.txt  times_25.txt  times_50.txt  times_500.txt
ctree/: concepts.hpp  ctree.hpp  ctree_empty.hpp  ctree_full.hpp  iterator.hpp  license_header  memory_profile.hpp  range_iterator.hpp  search.hpp  type_traits.hpp  types.hpp
examples/: CMakeLists.txt  example.cpp  profile_1.txt
tests/: CMakeLists.txt  compilation_checks.cpp  definitions.hpp  definitions_11.hpp  depth_0.cpp  depth_0__empty.cpp  depth_0__eq.cpp  depth_0__eq__all.cpp  depth_0__eq__unique.cpp  depth_0__lt.cpp  depth_0__lt__all.cpp  depth_0__lt__unique.cpp  depth_1__empty.cpp  depth_1__eq.cpp  depth_1__eq__all.cpp  depth_1__eq__unique.cpp  depth_1__lt.cpp  depth_1__lt__all.cpp  depth_1__lt__unique.cpp  depth_3.cpp  depth_3__empty.cpp  depth_3__eq.cpp  depth_3__eq__all.cpp  depth_3__eq__unique.cpp  depth_3__lt.cpp  depth_3__lt__all.cpp  depth_3__lt__unique.cpp  functions.hpp  test__metadata_w__depth_0__empty.cpp  test__metadata_w__depth_0__eq__all.cpp  test__metadata_w__depth_0__eq__unique.cpp  test__metadata_w__depth_0__lt__all.cpp  test__metadata_w__depth_0__lt__unique.cpp  test__metadata_w__depth_0__merge.cpp  test__metadata_w__depth_11__empty.cpp  test__metadata_w__depth_11__eq__all.cpp  test__metadata_w__depth_1__empty.cpp  test__metadata_w__depth_1__eq__all.cpp  test__metadata_w__depth_1__eq__unique.cpp  test__metadata_w__depth_1__lt__all.cpp  (+51 more)
